--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/devtools.js"></script>
+    <script src="https://togetherjs.com/togetherjs-min.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
