--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,10 @@
     <title>Devtools</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="DevTools - Developers Tools Collection" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/images/devtools-og-image.png" />
+    <meta property="og:description" content="A set of simple tools every developer needs, we collected them in one application." />
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
