#17 upgraded to the ember-cli 2.2.0beta1

--- a/app/index.html
+++ b/app/index.html
@@ -20,20 +20,20 @@
       ga('create', 'UA-53753121-1', 'auto');
       ga('send', 'pageview');
     </script>
-    {{content-for 'head'}}
+    {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/devtools.css">
 
-    {{content-for 'head-footer'}}
+    {{content-for "head-footer"}}
   </head>
   <body>
-    {{content-for 'body'}}
+    {{content-for "body"}}
 
     <script src="assets/vendor.js"></script>
     <script src="assets/devtools.js"></script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
 
-    {{content-for 'body-footer'}}
+    {{content-for "body-footer"}}
   </body>
 </html>
