#7 add darkroomjs image editor

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Devtools</title>
+    <title>DevTools</title>
     <meta name="description" content="A set of simple tools every developer needs, we collected them in one application.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="DevTools - Developers Tools Collection">
