--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,9 @@
   <body>
     {{content-for "body"}}
 
-    <script src="assets/vendor.js"></script>
-    <script src="assets/devtools.js"></script>
-    <script src="https://togetherjs.com/togetherjs-min.js"></script>
+    <script src="assets/vendor.js" integrity=""></script>
+    <script src="assets/devtools.js" integrity=""></script>
+    <script src="https://togetherjs.com/togetherjs-min.js" integrity=""></script>
 
     {{content-for "body-footer"}}
   </body>
